--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,6 +59,27 @@ body {
   height: 300px;
   margin-top: 40px;
 }
+
+.smallicon {
+  width:50px;
+  height: 50px;
+}
+
+.thetop {
+  vertical-align: top;
+}
+
+.hidden {
+	display: none;
+}
+
+#stack-div {
+  overflow: auto;
+}
+
+#documentation-div {
+  overflow: auto;
+}
 /*Footer Styling*/
 .social {
   width: 40px;
