--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,22 +40,19 @@ body {
 
 .leftDiv {
   float: left;
-  width: 40%;
-  height: 100px;
+  width: 50%;
   overflow-y: scroll;
   background-color: #FC6E51;
-  text-align: left;
+  text-align: center;
 }
 
 .rightDiv {
   float: left;
   overflow-y: scroll;
-  height: 100px;
-  width: 60%;
+  width: 50%;
   background-color: #4FC1E9;
   text-align: center;
 }
-
 .centerimg {
   text-align: right;
   position: absolute;
@@ -106,4 +103,8 @@ body {
 
 .padding {
   padding-top: 30px;
+}
+
+.ui-draggable, .ui-droppable {
+	background-position: top;
 }
