Updated grunt file to allow starting server and launching browser by typing grunt rtfm (or just grunt) at command line. This also allows for live-reloading of handlebars templates and other assets (just hit refresh in bbrowser to see changes after saving file.

--- a/views/stack_answers.handlebars
+++ b/views/stack_answers.handlebars
@@ -5,7 +5,7 @@
     <div class="card-header" role="tab" id="header-{{answer_id}}">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#answers-{{parent}}" href="#body-{{answer_id}}" aria-expanded="true" aria-controls="#{{id}}-header">
-          {{owner.display_name}} - score: {{score}} - last activity: {{last_activity_date}}
+          User: {{owner.display_name}} - score: {{score}} - last activity: {{last_activity_date}}
         </a>
       </h5>
     </div>
