Added jquery api scraping functionality (in progress). Will not display both at once in production version. Updated stack search to use advanced form to allow longer queries.  May need to review whether we search only title or title and body. Updated css and handlebars for showing/hiding information.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -103,7 +103,15 @@ body {
 .padding {
   padding-top: 30px;
 }
-
+.doc-item {
+  background-color: #4FC1E9;
+  max-height: 300px;
+  overflow-y: auto;
+  text-align: left;
+}
+.doc-list {
+  min-height: 10px;
+}
 .ui-draggable, .ui-droppable {
 	background-position: top;
 }
