change handlebars styling for search results div, added navbar, changed formatting

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,14 @@ body {
   color: #eee;
 }
 
+.h1-style {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 15px;
+}
 .right {
   text-align: right;
   position: absolute;
@@ -31,6 +39,19 @@ body {
 .borderbtm{
   border-bottom: 2px solid #eee;
 }
+
+.bg-faded {
+  background-color: #353434;
+}
+
+.navbar-light .navbar-brand {
+  color: #fff;
+}
+
+.jumbotron {
+  padding: 10px;
+  background-color: #b0b0b0;
+}
 /*Search Styling*/
 
 .smallimg {
@@ -42,13 +63,13 @@ body {
 .leftDiv {
   min-height: 400px;
   overflow-y: scroll;
-  background-color: #636363;
+  background-color: #b0b0b0;
 }
 
 .rightDiv {
   overflow-y: scroll;
   min-height: 400px;
-  background-color: #636363;
+  background-color: #b0b0b0;
 }
 
 .centerimg {
@@ -98,6 +119,16 @@ body {
 #documentation-div {
   overflow: auto;
 }
+
+h2 {
+  font-family: 'Roboto Mono', monospace;
+  color: #90ee90;
+  background-color: #353434;
+  font-size: 25px;
+  padding: 5px;
+  margin-top: 10px;
+  border-radius: 7px;
+}
 /*Footer Styling*/
 .social {
   width: 40px;
@@ -108,14 +139,38 @@ body {
   padding-top: 30px;
 }
 .doc-item {
-  background-color: #4FC1E9;
+  background-color: #ffffff;
   max-height: 300px;
   overflow-y: auto;
   text-align: left;
+  color: #000;
 }
 .doc-list {
   min-height: 10px;
 }
 .ui-draggable, .ui-droppable {
 	background-position: top;
+}
+
+/*Handlebars UI Styling*/
+.card-header-search{
+  background-color: #90ee90;
+  color: #ffffff;
+  text-align: center;
+}
+
+.card {
+  margin: 7px;
+  border-radius: 7px;
+}
+
+a {
+  font-size: 16px;
+  color: #000;
+}
+
+code {
+  background-color: #bd4147;
+  color: #fff;
+
 }
