--- a/views/stack.handlebars
+++ b/views/stack.handlebars
@@ -2,7 +2,7 @@
   <h2>Stack Questions</h2>
   {{#each questions}}
   <div class="card">
-    <div class="card-header" role="tab" id="header-{{question_id}}">
+    <div class="card-header-search" role="tab" id="header-{{question_id}}">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#accordion-stack-questions" href="#body-{{question_id}}" aria-expanded="true" aria-controls="#header-{{question_id}}">
           {{title}}
