--- a/views/jquery.handlebars
+++ b/views/jquery.handlebars
@@ -4,7 +4,7 @@
   <div id="jquery-list" class="collapse show">
   {{#each jquery}}
   <div class="card">
-    <div class="card-header" role="tab" id="{{id}}-header">
+    <div class="card-header-search" role="tab" id="{{id}}-header">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#accordion-jquery" href="#{{id}}" aria-expanded="true" aria-controls="{{id}}">
           {{name}}
