--- a/views/methods.handlebars
+++ b/views/methods.handlebars
@@ -4,7 +4,7 @@
   <div id="doc-method-list" class="collapse show">
   {{#each express}}
   <div class="card">
-    <div class="card-header" role="tab" id="{{link}}-header">
+    <div class="card-header-search" role="tab" id="{{link}}-header">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#accordion-express" href="#{{link}}" aria-expanded="true" aria-controls="{{link}}">
           {{name}}
