--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -84,6 +84,9 @@ h3 {
 
 .custom-select {
   background: #c0c0c0;
+  position: relative;
+  left: 17%;
+  margin-top: 5px;
 }
 
 /*Search Results Div Styling*/
@@ -129,6 +132,13 @@ h2 {
   margin-top: 10px;
   border-radius: 7px;
 }
+
+.input-group {
+  width: 50%;
+  margin: 10px;
+  height: 40%;
+}
+
 /*Footer Styling*/
 .social {
   width: 40px;
