Fixed jquery search (searches for exact name in query string). Cleaned up routes in controller folder.

--- a/views/express.handlebars
+++ b/views/express.handlebars
@@ -1,6 +1,6 @@
 <div id="accordion-express" class="express-list" role="tablist" aria-multiselectable="true">
   <label id="doc-method-listing-head" data-toggle="collapse" data-target="#express-method-list"> <h2> Express Methods </h2></label>
-  <div id="express-query-result"></div>
+  <div id="doc-query-result"></div>
   <div id="express-method-list" class="collapse show">
   {{#each express}}
   <div class="card">
