--- a/views/jquery.handlebars
+++ b/views/jquery.handlebars
@@ -1,6 +1,6 @@
 <div id="accordion-jquery" class="doc-list" role="tablist" aria-multiselectable="true">
   <label id="jquery-list-head" data-toggle="collapse" data-target="#jquery-list"> <h2> JQuery Methods </h2></label>
-  <div id="jquery-page-result"></div>
+  <div id="doc-query-result"></div>
   <div id="jquery-list" class="collapse show">
   {{#each jquery}}
   <div class="card">
