refactored document searches to eliminate need for search_module files. Fixed full text searching across columns. Changed express column names to have uniform naming.

--- a/views/express.handlebars
+++ b/views/express.handlebars
@@ -14,7 +14,7 @@
 
     <div id="express-{{id}}" class="collapse" role="tabpanel" aria-labelledby="express-{{id}}-header">
       <div class="card-block doc-item">
-        {{{html}}}
+        {{{detail}}}
       </div>
     </div>
   </div>
