--- a/views/jquery.handlebars
+++ b/views/jquery.handlebars
@@ -9,7 +9,7 @@
     {{#each jquery}}
       <div class="card">
 
-        <div class="card-header" role="tab" id="jquery-{{id}}-header">
+        <div class="card-header-search" role="tab" id="jquery-{{id}}-header">
           <h5 class="mb-0">
             <a data-toggle="collapse" data-parent="#accordion-jquery" href="#accordion-{{id}}">
               {{name}}
