--- a/views/mdn.handlebars
+++ b/views/mdn.handlebars
@@ -4,7 +4,7 @@
   <div id="mdn-result-list" class="collapse show">
   {{#each results}}
   <div class="card">
-    <div class="card-header" role="tab" id="{{link}}-header">
+    <div class="card-header-search" role="tab" id="{{link}}-header">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#accordion" href="#{{link}}" aria-expanded="true" aria-controls="{{link}}">
           {{name}}
