--- a/views/stack_answers.handlebars
+++ b/views/stack_answers.handlebars
@@ -2,7 +2,7 @@
 <div id="answers-{{parent_id}}" role="tablist" aria-multiselectable="true">
   {{#each answers}}
   <div class="card">
-    <div class="card-header" role="tab" id="header-{{answer_id}}">
+    <div class="card-header-search" role="tab" id="header-{{answer_id}}">
       <h5 class="mb-0">
         <a data-toggle="collapse" data-parent="#answers-{{parent}}" href="#body-{{answer_id}}" aria-expanded="true" aria-controls="#{{id}}-header">
           User: {{owner.display_name}} - score: {{score}} - last activity: {{last_activity_date}}
