--- a/views/jquery.handlebars
+++ b/views/jquery.handlebars
@@ -7,8 +7,7 @@
 
   <div id="jquery-list" class="collapse show">
     {{#each jquery}}
-      <div class="card">
-
+      <div class="card" id="jquery-top-{{id}}">
         <div class="card-header-search" role="tab" id="jquery-{{id}}-header">
           <h5 class="mb-0">
             <a data-toggle="collapse" data-parent="#accordion-jquery" href="#accordion-{{id}}">
@@ -22,8 +21,11 @@
             <h2> {{name}} </h2>
             <p> {{{description}}} </p>
             <h3>
-              <label class="btn btn-primary detail-link" data-id="{{id}}"> Details </label>
+              <label class="btn btn-primary detail-link" data-target="#jquery-details" data-toggle="modal" data-id="{{id}}">
+                Details
+              </label>
               <label class="btn btn-primary example-link" data-id="{{id}}"> Examples </label>
+              <label class="btn btn-primary modal-link" data-id="{{id}}"> Bigify This </label>
             </h3>
             <div id="detail-{{id}}" class="collapse hidden">
             <!-- Detail inserted here by front-end click handler-->
