--- a/views/express.handlebars
+++ b/views/express.handlebars
@@ -9,6 +9,7 @@
         <a data-toggle="collapse" data-parent="#accordion-express" href="#express-{{id}}" aria-expanded="true" aria-controls="{{link}}">
           {{name}}
         </a>
+        <label data-id="{{id}}" class="star btn btn-sm btn-danger">*</label>
       </h5>
     </div>
 
